<resources>
    <string name="app_name">MinobrLabs</string>

    <string name="stats">Статистика</string>
    <string name="params">Показатели</string>
    <string name="devices">Устройства</string>
    <string name="experiments">Эксперименты</string>
    <string name="bt_devices">Устройства</string>

    <string name="start_recording">Записывать</string>
    <string name="stop_recording">Остановить</string>
    <string name="persist_recording">Сохранить</string>
    <string name="clear_recording">Сбросить</string>
    <string name="repeat">Возобновить</string>

    <string name="detectors_sleep_time_exception" formatted="false">Время должно быть в пределах от %s до %s сек.</string>
    <string name="experiment_name">Название эксперимента</string>
    <string name="annotation">Аннотация</string>
    <string name="select">Выбрать</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отменить</string>

    <string name="bt_unsuccessful">Не удалось подключиться к устройству</string>
    <string name="bt_offed">Bluetooth выключен. Включите его и перезапустите приложение</string>
    <string name="bt_enabling">Включаем Bluetooth</string>
    <string name="bt_connecting">Соединяемся с устройством</string>
</resources>
